Update AlleleResource to extend Resource Generify AbstractAlleleIndexer to AbstractIndexer Rename AbstractAlleleArchive as AbstractArchive Update ArchiveFileReader to read non-folders Add new FileArchive class Generify AlleleResourceDownloader as ResourceDownloader